[build-system]
requires = [
    "wheel",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.0",
    "cmake>=3.26",
    "ninja",
    "cmake-build-extension",
    "pybind11",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "../.."
local_scheme = "dirty-tag"

[tool.cibuildwheel]
build-frontend = "build"
skip = "cp38-mac* cp36-win* *win32"
