[metadata]
name = mlconcepts
description = A small library implementing several interpretable machine learning algorithms based on FCA.
long_description = file: README.md
long_description_content_type = text/markdown
author = Mattia Panettiere
author_email = mattia.panettiere@gmail.com
license = BSD3
platforms = any
url = https://github.com/xeredent/libmlconcepts
project_urls =
    Source = https://github.com/xeredent/libmlconcepts
    Tracker = https://github.com/xeredent/libmlconcepts/issues
keywords = outlier-detection machine-learning formal-concepts-analysis
classifiers =
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
python_requires = >=3.6

[options.extras_require]
testing =
    pytest
    numpy
all =
    %(testing)s

[tool:pytest]
testpaths = tests/python